--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         const settings = {
             avatar: "3605513290",
             name: "Xiaomckedou233",
-            sign: "请我喝杯可乐如何？( •̀ ω •́ )✧",
+            sign: "帮小蝌蚪分担一下服务器压力如何？( •̀ ω •́ )✧",
             hide_badge_generator: false
         }
         const urls = {
