--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             hide_badge_generator: false
         }
         const urls = {
-            alipay: "https://qr.alipay.com/fkx19308fmhdodse4a7vu41?t=1638630319334",
-            wechat: "wxp://f2f0ztGfw9u3WagBbDHikaGEZuDB_d9QsPzjcn1YWu_hzW8",
-            qq: "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&f=wallet&a=1&ac=CAEQ19vligoY3K2tjQY%3D_xxx_sign&u=2706992599&n=Alex3236" // QQ 二维码链接
+            alipay: "https://pro-image.xiaoheiban.cn/xnb/edf58d7c-971e-45a5-af36-6a616c54a825.png?x-oss-process=image",
+            wechat: "https://pro-image.xiaoheiban.cn/vpi/6ab545af-383a-421d-9066-2ee63a8e5e15.png?x-oss-process=image",
+            qq: "https://pro-image.xiaoheiban.cn/abe/af179b41-5a67-4068-8096-62859eb2a0c5.png?x-oss-process=image" // QQ 二维码链接
         }
     </script>
 </head>
